--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/inventario/listaCompras.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/inventario/listaCompras.zul
@@ -1,112 +1,298 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c"?>
+<?variable-resolver class="org.zkoss.zkplus.spring.DelegatingVariableResolver"?>
+
 <zk xmlns="http://www.zkoss.org/2005/zul"
-    xmlns:h="http://www.w3.org/1999/xhtml"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://www.zkoss.org/2005/zul
+	xmlns:h="http://www.w3.org/1999/xhtml"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.zkoss.org/2005/zul
 	http://www.zkoss.org/2005/zul/zul.xsd">
-    <window id="listaMovimientoWindow" 
-            border="normal"
-            width="100%"
-            height="100%"            
-            use="sv.com.diserv.web.ui.inventario.ListaComprasCtrl">
-        <groupbox height="45px"
-                  mold="3d" 
-                  closable="false">    
-            <toolbar align="end"
-                     style="float:right; border-style:none;">
-                <button id="btnImprimir"
-                        sclass="oT_ButtonWithIcon"
-                        image="/images/btnprint.gif"
-                        tooltiptext="Imprimir documentos cliente"/>
-                <button id="btnNuevoMovimiento"
-                        sclass="oT_ButtonWithIcon"
-                        image="/images/btnnew.gif"
-                        tooltiptext="Agregar Nuevo documento Cliente"  />
-                <button id="btnBusquedaMovimientoDocumento"
-                        sclass="oT_ButtonWithIcon"
-                        image="/images/btnsearch.gif"
-                        tooltiptext="Buscar Documentos cliente"/>
-                <button id="btnRefresh"
-                        sclass="oT_ButtonWithIcon"
-                        image="/images/btnrefresh.gif"
-                        tooltiptext="Refrescar registros"/>
-                
-            </toolbar>
-        </groupbox>
-        <groupbox mold="3d" width="100%" height="325px">  
-            <caption label="Lista Movimientos de compra Ingresados" /> 
-            <paging id="pagingMovimientosCompra" /> 
-            <listbox id="listBoxMovimientos"
-                     style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;"
-                     tooltiptext="Para ver detalle click sobre registro" 
-                     width="100%"
-                     height="100%"                     
-                     mold="paging"
-                     pagingPosition="top"
-                     multiple="false">
-                <listhead sizable="true">
-                    <listheader id="lhIdMovimiento"
-                                sclass="FDListBoxHeader1"
-                                width="5%"
-                                label="Id Movimiento" />
-                    <listheader id="lhFechaMovimiento"
-                                sclass="FDListBoxHeader1"
-                                width="15%"
-                                label="Fecha Movimiento" />
-                     <listheader id="lhNumero"
-                                sclass="FDListBoxHeader1"
-                                width="10%"
-                                label="Numero" />
-                     <listheader id="lhRegistro"
-                                sclass="FDListBoxHeader1"
-                                width="15%"
-                                label=" registro iva" />
-                    <listheader id="lhProveedor"
-                                sclass="FDListBoxHeader1"
-                                width="30%"
-                                label="Nombre Proveedor" />
-                    <listheader id="lhObservacioens"
-                                sclass="FDListBoxHeader1"
-                                width="40%"
-                                label="Observaciones" />
-                     
-                </listhead>
-            </listbox>
-        </groupbox>   
-        <separator />
-        <groupbox mold="3d" 
-                  width="100%" 
-                  height="250px">  
-            <caption label="Lista detalle movimiento agregados" />
-            <listbox id="listBoxDetalleMovimiento"
-                     style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;"
-                     vflex="true"
-                     height="100%"
-                     width="100%"
-                     multiple="false">
-                <listhead sizable="true">
-                    <listheader
-                        sclass="FDListBoxHeader1" 
-                        width="10%"
-                        label="Id Movimiento" />
-                    <listheader
-                        sclass="FDListBoxHeader1"
-                        width="40%"
-                        label="Descripcion" />
-                    <listheader
-                        sclass="FDListBoxHeader1"
-                        width="17%"
-                        label="Cantidad" />
-                    <listheader
-                        sclass="FDListBoxHeader1"
-                        width="17%"
-                        label="Unitario" />                 
-                    <listheader
-                        sclass="FDListBoxHeader1"
-                        width="14%"
-                        label="Total Gravado " />
-                </listhead>                
-            </listbox>
-        </groupbox>
-    </window>
+
+	<window id="listaMovimientoWindow" use="sv.com.diserv.web.ui.inventario.ListaComprasCtrl" border="none"
+		width="100%"
+         >
+
+		<panel id="panelOrderList"
+			title="Listado de Compras" border="none">
+			<panelchildren>
+
+				<div sclass="z-toolbar" style="padding:0">
+					<hbox pack="stretch" sclass="hboxRemoveWhiteStrips"
+						width="100%">
+
+						<!-- COMMON BUTTONS -->
+						<toolbar align="start"
+							style="float:left; border-style: none;">
+							<toolbarbutton id="btnHelp"
+								image="/images/light_16x16.gif"
+								tooltiptext="mostrar ayuda" />
+							<toolbarbutton id="btnRefresh"
+								image="/images/btnrefresh.gif"
+								tooltiptext="refrescar Listado" />
+							<separator orient="vertical" />
+						</toolbar>
+
+
+						<!-- SEARCH AREA -->
+						<toolbar align="center"
+							style="float:left; border-style: none;">
+							<hbox id="hBoxCustomerSearch" align="center"
+								style="padding: 2px">
+
+								<!-- 
+									<hbox id="hBoxCustomerSearch">
+								-->
+								<label id="label_OrderList_Customer"
+									value="Proveedor" />
+
+
+								<bandbox
+									id="bandbox_OrderList_CustomerSearch" width="250px"
+									tooltiptext="${c:l('bandbox_OrderList_CustomerSearch.tooltiptext')}">
+									<bandpopup
+													id="bpop_Orders_CustomerSearch" width="540px"
+													height="490px">
+													<panel
+														id="panel_bboxCustomerSearch2"
+														title="Buscar Proveedor" />
+
+													<vbox>
+														<hbox
+															width="100%">
+
+															<grid
+																fixedLayout="true" style="border:0px" width="100%">
+																<columns>
+																	<column
+																		width="150px" />
+																	<column
+																		width="250px" />
+																	<column
+																		width="100px" />
+																	<column
+																		width="40px" />
+																</columns>
+																<rows>
+																	<row>
+																		<label
+																			id="label_bboxCustomerSearch2_CustNo"
+																			value="Codigo" />
+																		<textbox
+																			id="tb_Orders_SearchCustNo" width="99%" />
+																		<button
+																			id="button_bbox_CustomerSearch_Search"
+																			image="/images/search.gif"
+																			label="Buscar"
+																			tooltiptext="${c:l('Buscar Proveedor')}" />
+																		<button
+																			id="button_bbox_CustomerSearch_Close"
+																			image="/images/stop.gif"
+																			tooltiptext="${c:l('button_bbox_CustomerSearch_Close.tooltiptext')}" />
+																	</row>
+																	<row>
+																		<label
+																			id="label_bboxCustomerSearch2_CustMatchcode"
+																			value="Registro" />
+																		<textbox
+																			id="tb_Orders_CustSearchMatchcode" width="99%" />
+																	</row>
+																	<row>
+																		<label
+																			id="label_bboxCustomerSearch2_CustName1"
+																			value="Nombre" />
+																		<textbox
+																			id="tb_Orders_SearchCustName1" width="99%" />
+																	</row>
+																
+
+																	<row
+																		spans="4">
+																		<vbox
+																			width="100%">
+																			<paging
+																				id="paging_OrderDialog_CustomerSearchList"
+																				pageSize="20" />
+																			<listbox
+																				id="listBoxCustomerSearch" width="100%"
+																				height="100%" multiple="false">
+																				<listhead
+																					sizable="true">
+																					<listheader
+																						id="listheader_CustNo_2" sort="auto" width="15%"
+                                                                                                                                                                                image="/images/builder.gif"
+																						label="Codigo" />
+																					<listheader
+																						id="listheader_CustMatchcode_2" sort="auto"
+                                                                                                                                                                                image="/images/builder.gif"
+																						width="15%"
+																						label="Registro" />
+																					<listheader
+																						id="listheader_CustName1_2" sort="auto"
+                                                                                                                                                                                image="/images/create_doc.gif"
+																						width="60%"
+																						label="Nombre" />
+																					
+																				</listhead>
+																			</listbox>
+																		</vbox>
+																	</row>
+
+																</rows>
+															</grid>
+
+														</hbox>
+													</vbox>
+												</bandpopup>
+								</bandbox>
+
+								<separator bar="true" orient="vertical" />
+
+								<label
+									id="label_OrderList_SearchOrderName"
+									value="Compra No." />
+								<textbox id="tb_Orders_Order"
+									width="120px" />
+								<button
+									id="button_OrderList_OrderNameSearch"
+									sclass="oT_ButtonWithIcon" image="/images/search.gif"
+									label="${c:l('button_OrderList_OrderNameSearch.label')}"
+									tooltiptext="${c:l('button_OrderList_OrderNameSearch.tooltiptext')}" />
+								<separator bar="true" orient="vertical" />
+							</hbox>
+						</toolbar>
+
+
+						<!-- CRUD BUTTONS -->
+						<toolbar align="end"
+							style="float:right; border-style: none;">
+							<button id="button_OrderList_NewOrder"
+								sclass="oT_ButtonWithIcon"
+								image="/images/btnnew.gif"
+								tooltiptext="${c:l('button_OrderList_NewOrder.tooltiptext')}" />
+						</toolbar>
+
+					</hbox>
+				</div>
+
+				<paging id="paging_OrderList" />
+				<listbox id="listBoxOrder"
+					style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;"
+					tooltiptext="${c:l('listbox.tooltiptext')}" width="100%"
+					multiple="false">
+					<listhead sizable="true">
+						<listheader id="listheader_OrderList_OrderFecha"
+							sclass="FDListBoxHeader1" image="/images/builder.gif"
+							sort="auto" width="40%"
+							label="Fecha" />
+						<listheader id="lhIdMovimiento"
+							sclass="FDListBoxHeader1" image="/images/builder.gif"
+							sort="auto" width="60%"
+							label="No. Compra" />
+                                                <listheader id="lhNoRegistro"
+							sclass="FDListBoxHeader1" image="/images/create_doc.gif"
+							sort="auto" width="60%"
+							label="No. Registro" />
+                                                <listheader id="lhProveedor"
+							sclass="FDListBoxHeader1" image="/images/create_doc.gif"
+							sort="auto" width="60%"
+							label="Proveedor" />
+                                                <listheader id="lhObservaciones"
+							sclass="FDListBoxHeader1" image="/images/create_doc.gif"
+							sort="auto" width="60%"
+							label="Observaciones" />
+					</listhead>
+				</listbox>
+
+			</panelchildren>
+		</panel>
+
+		<separator />
+
+		<panel id="panel_OrderList_OrderPositions"
+			title="Detalle de Compra"
+			border="none">
+			<panelchildren>
+
+				<borderlayout id="borderLayout_ListBoxOrderArticle"
+					height="250px">
+
+					<north border="none" height="26px">
+						<paging id="paging_OrderArticleList" />
+					</north>
+
+					<center border="none">
+
+						<listbox id="listBoxDetalleCompra"
+							style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;"
+							vflex="true" height="100%" width="100%" multiple="false">
+							<listhead sizable="true">
+								<listheader
+									id="listheader_OrderPosList_Orderpos_No"
+									sclass="FDListBoxHeader1" image="/images/builder.gif"
+									sort="auto" width="10%"
+									label="Codigo" />
+								<listheader
+									id="listheader_OrderPosList_Shorttext"
+									sclass="FDListBoxHeader1" image="/images/create_doc.gif"
+									sort="auto" width="40%"
+									label="Producto" />
+								<listheader
+									id="listheader_OrderPosList_Count" sclass="FDListBoxHeader1"
+									image="/images/builder.gif" sort="auto" width="10%"
+									label="Cantidad" />
+								<listheader
+									id="listheader_OrderPosList_SinglePrice"
+									sclass="FDListBoxHeader1" image="/images/builder.gif"
+									sort="auto" width="20%"
+									label="Costo Unitario" />
+								<listheader
+									id="listheader_OrderPosList_WholePrice"
+									sclass="FDListBoxHeader1" image="/images/builder.gif"
+									sort="auto" width="20%"
+									label="Total" />
+							</listhead>
+							<listfoot>
+								<listfooter
+									id="listfooter_OrderPosList_Orderpos_No" width="10%"
+									label="${c:l('message_Sum')}" style="font-weight:bold" />
+								<listfooter
+									id="listfooter_OrderPosList_Shorttext" width="40%" label="" />
+								<listfooter
+									id="listfooter_OrderPosList_Count" width="10%" label=""
+									style="text-align: right" />
+								<listfooter
+									id="listfooter_OrderPosList_SinglePrice" width="20%" label=""
+									style="text-align: right" />
+								<listfooter
+									id="listfooter_OrderPosList_WholePrice" width="20%"
+									height="20px" label="test5" style="text-align: right" />
+
+							</listfoot>
+						</listbox>
+
+					</center>
+
+					<south border="none">
+						<separator />
+					</south>
+
+				</borderlayout>
+
+			</panelchildren>
+		</panel>
+
+
+
+	</window>
 </zk>
+
+
+<!-- 
+	<style dynamic="true">
+	.mybandbox .z-bandbox-img { background: transparent
+	url(${c:encodeURL('~./zul/img/button/bandbtn.gif')})
+	no-repeat 0 0; border: 1px solid #C0C0C0 ;
+	vertical-align: top: cursor: pointer: width: 19px;
+	height: 19px ;}
+	</style>
+-->
