--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/inventario/encabezadoCompra.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/inventario/encabezadoCompra.zul
@@ -166,19 +166,25 @@
 																						id="listheader_CustNo" sort="auto" width="15%"
                                                                                                                                                                                 image="/images/builder.gif"
 																						label="Codigo" />
+                                                                                                                                                                        <listheader
+																						id="listheader_CustName1" sort="auto"
+                                                                                                                                                                                image="/images/create_doc.gif"
+																						width="60%"
+																						label="Nombre" />
 																					<listheader
 																						id="listheader_CustMatchcode" sort="auto"
                                                                                                                                                                                 image="/images/builder.gif"
 																						width="15%"
 																						label="Registro" />
 																					<listheader
-																						id="listheader_CustName1" sort="auto"
+																						id="listheader_CustTel" sort="auto"
                                                                                                                                                                                 image="/images/create_doc.gif"
 																						width="60%"
-																						label="Nombre" />
+																						label="Telefono" />
 																					
 																				</listhead>
 																			</listbox>
+																			
 																		</vbox>
 																	</row>
 
