--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/inventario/listaCompras.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/inventario/listaCompras.zul
@@ -211,7 +211,7 @@
 			</panelchildren>
 		</panel>
 
-		<separator />
+<!--		<separator />
 
 		<panel id="panel_OrderList_OrderPositions"
 			title="Detalle de Compra"
@@ -284,7 +284,7 @@
 				</borderlayout>
 
 			</panelchildren>
-		</panel>
+		</panel>-->
 
 
 
